--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
