--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "dayjs": "^1.11.13",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
